# res-solutions

./: .gitignore  .gitmodules  CLAUDE.md  README.md  check_html.py  config.py  install.sh  pyproject.toml  restart.sh  test_refresh.py  test_timer.py  test_ui.py  test_ui_simple.py
server/: image_utils.py  main.py  task_manager.py  worker_registry.py
tests/: smoke_test.py
worker/: base_worker.py  grounded_sam_worker.py  mock_worker.py  ollama_sam_worker.py  qwen_sam_bbox_worker.py  qwen_sam_worker.py
worker/api_clients/: grounded_sam_client.py  ollama_client.py  qwen_client.py  sam_client.py  vlm_utils.py
