[project]
name = "res-solutions"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gradio>=4.16.0",
    "pillow>=10.2.0",
    "numpy>=1.26.3",
    "aiohttp>=3.9.1",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
sam = [
    "torch>=2.0.0",
    "sam2>=0.1.0",
]
qwen = [
    "scipy>=1.12.0",
]
ollama = []
grounded-sam = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "supervision>=0.16.0",
    "pycocotools>=2.0.6",
]
all = [
    "torch>=2.0.0",
    "sam2>=0.1.0",
    "scipy>=1.12.0",
    "torchvision>=0.15.0",
    "supervision>=0.16.0",
    "pycocotools>=2.0.6",
]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server", "worker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
